<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:scrollbars="none"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/image_holder"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/background_image"
            android:layout_width="wrap_content"
            android:layout_height="458dp"
            android:contentDescription="@string/weather_background"
            android:scaleType="centerCrop"
            android:src="@drawable/evening_forest_comp"
            app:shapeAppearanceOverlay="@style/RoundedCorner">

        </com.google.android.material.imageview.ShapeableImageView>

        <LinearLayout
            android:layout_marginTop="23dp"
            android:layout_marginStart="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">
        <TextView
            android:id="@+id/DateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Day"
            android:textColor="@color/white"
            android:textSize="19sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/CurrentWeatherDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="101dp"
            android:layout_marginEnd="60dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="-22°C"
            android:textColor="@color/white"
            android:textSize="52sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />


    </RelativeLayout>

        <LinearLayout
            android:id="@+id/quick_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:orientation="vertical"
                android:background="@drawable/round_corner_layout">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="22dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/wind" />

                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:text="Wind"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle=""
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/windValue"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:text="5-8 km/h"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />

            </LinearLayout>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:orientation="vertical"
                android:background="@drawable/round_corner_layout">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="22dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:text="Pressure"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle=""
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/pressureValue"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:text="1000 MB"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />

            </LinearLayout>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:orientation="vertical"
                android:background="@drawable/round_corner_layout">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="22dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/water" />

                <TextView
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle=""
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:text="51%"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/recyclerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:padding="10dp"
            android:background="@drawable/time_zone_layout"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false"
            tools:ignore="RtlSymmetry">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>